[tool.poetry]
name = "llm-summacum"
version = "0.1.0"
description = ""
authors = ["jaepil-choi.laptop <chljeffreyz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-core = "^0.2.11"
langchain-text-splitters = "^0.2.2"
langchain-upstage = "^0.1.7"
notebook = "^7.2.1"
ipykernel = "^6.29.5"
oracledb = "^2.2.1"
openai = "^1.35.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
